trunk/Archive/8b12ce2d73ac19b0429d3428f0c5a48e-7063104e283ed82d51a6fde7370c6e59/output
main.cpp:2:1: error: 'a' does not name a type
 a aa();
 ^
main.cpp:3:1: error: 'b' does not name a type
 b aa();
 ^
main.cpp:124:1: error: 'c' does not name a type
 c cc();
 ^
main.cpp:125:1: error: 'd' does not name a type
 d dd();
 ^
main.cpp:186:1: error: 'c' does not name a type
 c cc();
 ^
main.cpp:187:1: error: 'd' does not name a type
 d dd();
 ^
main.cpp:248:1: error: 'c' does not name a type
 c cc();
 ^
main.cpp:249:1: error: 'd' does not name a type
 d dd();
 ^
